--- a/Codigo/css/style_novaProposta.css
+++ b/Codigo/css/style_novaProposta.css
@@ -2,11 +2,6 @@ body{
     background-color: #E7E7E7 !important;
 }
 
-main{
-    background-color: #E7E7E7;
-    padding-bottom: 50px;
-}  
-
 .divNovaProposta{
     background-color: white !important;
     border-radius: 5px;    
@@ -19,28 +14,59 @@ main{
     padding: 15px;
 }
 
+.titulo{
+    background-color:  #E7E7E7 !important;
+    margin-top: 10px;
+}
+
+.titulo h3{
+    margin: 0px !important;
+    padding: 10px 0px 10px 0px;
+}
+
+.nomeAnuncio{
+    margin-top: 15px;
+}
+
 .descricao{
     text-align: justify;
     margin-top: 20px;
 }
 
-.imagem{
-    width: 80%;
-}
-
-.divProposta{
-    margin-top: 15px;
-}
-
 .divFazerProposta{
     padding: 0px 120px 0px 120px;
+    margin-top: 30px;
 }
 
+.lblTitulo{
+    font-weight: bold;
+}
+
+.fieldsetCondicoes{
+    border: 1px solid rgb(207, 207, 207) !important;
+    padding: 10px !important;
+    margin: 0 0 30px 0;
+    height: auto;
+}
+
+.fieldsetCondicoes legend{
+    border: none;
+    width: auto;
+    font-size: 15px;
+    margin: 0px !important;
+}
+
+.fieldsetCondicoes legend label{
+    margin: 0px !important;
+}
+
+
 .btnCarregar{
-    width: 50%;
+    width: 60%;
     height: 40px;
     background: rgb(51, 51, 51) !important;
     color: white !important;
+    border-color: rgb(51, 51, 51) !important;
 }
 
 .divBtnProposta{
@@ -55,4 +81,5 @@ main{
     height: 60px;
     background: rgb(51, 51, 51) !important;
     color: white !important;
+    border-color: rgb(51, 51, 51) !important;
 }
