--- a/Codigo/css/style.css
+++ b/Codigo/css/style.css
@@ -59,20 +59,24 @@ footer{
     width: 100%;
 }
 
-.formSearch button{
-    border-color: white;
-    color: white;
+.btnPesquisar{
+    color: #E7E7E7;
+    border-color: #E7E7E7;
 }
 
-.formSearch button:hover{
-    border-color: rgb(73, 117, 211);
-    color: white;
-    background-color: rgb(73, 117, 211);
-}  
+.btnPesquisar:hover{
+    background: #E7E7E7;
+    color: rgb(51, 51, 51);
+    border-color: rgb(51, 51, 51);
+}
 
 .divNavbar{
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.divNavbar a{
+    color: rgb(102, 102, 102) !important;
 }
 
 .logado{
@@ -169,15 +173,85 @@ footer b{
 
 /*ELEMENTOS EXCLUSIVOS DA PÁGINA DE CADASTRO*/
 
-.divCadastro{
+.divEntrar{
     background-color: white;
-    padding: 50px;
-    padding-bottom: 50px;
+    padding: 30px 0px 20px;
 }
 
+.titulo{
+    background-color:  #E7E7E7 !important;
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+.titulo h3{
+    margin: 0px !important;
+    padding: 10px 0px;
+}
+
+.containerCadastrar{
+    background-color: white !important;
+    border-radius: 5px;    
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+}
+
+.divAvisoErro{
+    background-color: red;
+    color: white;
+}
+
+.divAvisoErro h5{
+    margin: 0px !important;
+    padding: 10px;
+}
+
+.divAvisoSucesso{
+    background-color: green;
+    color: white;
+}
+
+.divAvisoErro h5{
+    margin: 0px !important;
+    padding: 10px;
+}
+
+.divBtnCadastrar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0px 10px;
+}
+
+.divBtnCadastrar button{
+    width: 20%;
+    height: 50px;
+    background: rgb(51, 51, 51) !important;
+    border: none;
+}
 
 /*ELEMENTOS EXCLUSIVO DE PÁGINA DE LOGIN*/
 
-.btnLogin button{
-    width: 100% !important;
+.divBtnLogin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px 0px 10px;
+}
+
+.divBtnLogin button{
+    width: 20%;
+    height: 50px;
+    background: rgb(51, 51, 51) !important;
+    border: none;
+}
+
+.containerEntrar{
+    background-color: white !important;
+    border-radius: 5px;    
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    
 }
