--- a/Codigo/css/style_novoAnuncio.css
+++ b/Codigo/css/style_novoAnuncio.css
@@ -1,6 +1,6 @@
 .areaGeral{
     background-color: rgb(250, 249, 249);
-    padding-top: 40px;
+    padding-top: 25px;
 }
 
 .areaGeral label{
@@ -46,6 +46,8 @@ label.labelRadio{
 }
 
 .divBtnCriar button{
-    width: 300px;
-    height: 60px;
+    width: 20%;
+    height: 50px;
+    background: rgb(51, 51, 51) !important;
+    border: none;
 }
