--- a/Codigo/css/style_anuncio.css
+++ b/Codigo/css/style_anuncio.css
@@ -67,11 +67,11 @@ main{
 }
 
 .btnTrocar{
-    width: 60%;
-    height: 60px;
+    width: 100%;
     background: rgb(51, 51, 51) !important;
     color: white !important;
-}
+    border-color: rgb(51, 51, 51) !important;
+}    
 
 .destaque{
     background-color: white !important;
