--- a/Codigo/css/style_popostaTroca.css
+++ b/Codigo/css/style_popostaTroca.css
@@ -25,12 +25,17 @@ body{
 }
 
 .nomeAnuncio{
-    margin-top: 15px;
+    margin-top: 15px;   
+}
+
+.rowNomeAnuncio{
+    padding-left: 15px;
 }
 
 .descricao{
     text-align: justify;
     margin-top: 20px;
+    padding-left: 15px;
 }
 
 .decricaoProposta{
@@ -57,6 +62,32 @@ body{
 
 .topicosProposta{
     font-weight: bold;
+}
+
+.divMenuAdmin{
+    padding: 0px !important;
+}
+
+.fieldsetMenuAdm{
+    border: 1px solid rgb(207, 207, 207) !important;
+    padding: 10px !important;    
+    height: auto;
+}
+
+.tituloMenuAdm{
+    margin: 0px !important;
+    text-align: center;
+}
+
+.divBtnMenuAdmin{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btnMenuAdmin{
+    width: 80%;
+    margin-top: 10px;
 }
 
 .divBotoesResponderProposta{
