--- a/Codigo/css/style_popostaTroca.css
+++ b/Codigo/css/style_popostaTroca.css
@@ -43,6 +43,7 @@ body{
     margin-top: 20px;
 }
 
+/* Informações da proposta */
 
 .fieldsetProposta{
     border: 1px solid rgb(207, 207, 207) !important;
@@ -64,6 +65,7 @@ body{
     font-weight: bold;
 }
 
+/* Menu administrador*/ 
 .divMenuAdmin{
     padding: 0px !important;
 }
@@ -93,4 +95,53 @@ body{
 .divBotoesResponderProposta{
     display: block;
     margin-left: auto;
+}
+
+/* CHAT */
+.fieldsetChat{
+    border: 1px solid rgb(207, 207, 207) !important;
+    padding: 10px !important;
+    margin: 0 0 30px 0;
+    height: auto;
+}
+
+.fieldsetChat legend{
+    border: none;
+    width: auto;
+}
+
+.divChat{
+    padding-left: 40px !important;
+    padding-right: 40px !important;
+}
+
+.divTextArea{
+    margin: 0px !important;
+}
+
+.divColBotao{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.btnEnviarMensagem{
+    width: 100%;
+    background: rgb(51, 51, 51) !important;
+    color: white !important;
+	border: none !important;   
+}
+
+.mensagemLogado p{
+    float: right;
+    background: rgb(207, 207, 207);
+    padding: 8px;
+    
+}
+
+.mensagemOutros p{
+    float: left;
+    background: rgb(160, 160, 160);
+    padding: 8px;
 }
